// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KiltAmount KiltAmount should render costs 1`] = `
<div>
  <span
    class="amount"
  >
    1.2346
     
    <span
      aria-label="KILT Coin"
      class="coin"
    />
  </span>
</div>
`;

exports[`KiltAmount KiltAmount should render funds 1`] = `
<div>
  <span
    class="amount"
  >
    1.2345
     
    <span
      aria-label="KILT Coin"
      class="coin"
    />
  </span>
</div>
`;

exports[`KiltAmount KiltAmount should render with small fractional part 1`] = `
<div>
  <span
    class="amount"
  >
    1
    <span
      class="fractional"
    >
      .2346
    </span>
     
    <span
      aria-label="KILT Coin"
      class="coin"
    />
  </span>
</div>
`;
